--- a/src/main/webapp/Index.html
+++ b/src/main/webapp/Index.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/ce4cad5060.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="CSS/style1.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Welcome Admin</title>
 </head>
 
@@ -25,11 +25,11 @@
         <ul class="navbar-nav d-flex flex-column mt-3 w-100">
             <li class="nav-item w-100 "> 
             	<img src="image/vk.jpg" alt="Avatar" class="bg-light margin-left rounded-circle direct-chat-img mt-3" > 
-            		<a href="#profile" style="color: #ffffff; text-decoration: none; margin-left: 0.625rem;" class="fs-5">Alexander Pierce</a>
+            		<a href="#profile" class="fs-5 text-white navImg">Alexander Pierce</a>
 				
             </li>
             <li class="nav-item w-100 text-light ml-2.813 online px-5 mx-4" > 
-            	<span class="fontSize"><i class="fa-solid fa-circle p-1" style="color: #22aa2b;"></i>Online</span> 
+            	<span class="fontSize"><i class="fa-solid fa-circle p-1 onlinecolor"></i>Online</span> 
             </li>
          
             <li class=" dropdown nav-item w-100">
@@ -39,7 +39,7 @@
         				<i class="fa-solid fa-gauge text-white px-3" aria-hidden="true"></i>Dashboard
 					</button>
 				</h2>
- 				<div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample" style="">
+ 				<div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
     				<div class="accordion-body">
         				<a href="#" class=" text-light pl-4 p-2 thumbnail"><i class="fa-solid fa-o text-white px-3" aria-hidden="true"></i>Dashboard 1</a>
         				<a href="#" class=" text-light pl-4 p-2 thumbnail"><i class="fa-solid fa-o text-white px-3" aria-hidden="true"></i>Dashboard 2</a>
@@ -167,8 +167,7 @@
 						</section>
 					</div>
 					<div class="card-body border bg-white">
-						<div class="direct-chat-messages overflow-auto"
-							style="max-height: 260px">
+						<div class="direct-chat-messages overflow-auto chatHeight">
 							<div class="direct-chat-msg">
 								<div class="direct-chat-infos clearfix">
 									<span class="direct-chat-name float-left"><strong>Alexander
