--- a/src/main/webapp/Index.html
+++ b/src/main/webapp/Index.html
@@ -63,7 +63,8 @@
 	                </button> 
                 </section>
             </div>
-            <div class="col-5"></div>
+            <div class="col-5">
+            </div>
             <div class="col-6 mt-2 p-2"> 
             	<div >
             		<a href="#setting" class="mr-3">
